fix(style): properly align app-name

--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -52,7 +52,6 @@ header {
         .app-name {
             transition: bootstrap.$transition-base;
             color: inherit;
-            margin-top: -3px;
         }
 
         &:hover {
